examples/test/testpolicy14834.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14834
  namespace: namespace446
spec:
  podSelector:
    matchLabels:
      key49: value48
      key15: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value46
          key45: value12
      podSelector:
        matchLabels:
          key9: value23
          key1: value49
